# aio_process_pool

./: README.md  pyproject.toml
src/aio_process_pool/: __init__.py  executor.py  process_pool.py  utils.py  worker.py
tests/: pool_test.py  shutdown_test.py
